--- a/cursus/templates/docs.html
+++ b/cursus/templates/docs.html
@@ -16,7 +16,7 @@ main %} {{ super() }}
     />
   </div>
 </div>
-<div class="docs__card-container mb-24">
+<div class="docs__card-container mb-12 pb-1">
   <a
     href="{{ url_for('views.docs.show', page_name='search') }}"
     class="docs__card"
