--- a/cursus/templates/_base.html
+++ b/cursus/templates/_base.html
@@ -92,7 +92,9 @@
     navbar(page_name) }}
 
     <!-- Main -->
-    <main style="padding-top: 72px">{% block main %}{% endblock %}</main>
+    <main style="padding-top: 72px; min-height: calc(100vh - 7.25rem)">
+      {% block main %}{% endblock %}
+    </main>
 
     <!-- Footer -->
     {% import 'macros/footer.html' as footer %} {{ footer.footer() }} {% assets
