--- a/cursus/static/scss/components/_heading.scss
+++ b/cursus/static/scss/components/_heading.scss
@@ -1,13 +1,29 @@
 .heading {
   scroll-margin-top: 88px; // Skip the height of the navbar (72px) + 16px of padding
   padding-inline-end: 1em;
+  overflow-wrap: break-word;
 
   &--h1 {
     line-height: 1.25;
-    font-weight: 700;
+    font-weight: 800;
     font-size: 40px;
-    overflow-wrap: break-word;
     margin-top: 0;
+  }
+
+  &--h2 {
+    line-height: 2.5rem;
+    font-weight: 700;
+    font-size: 28px;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+  }
+
+  &--h3 {
+    line-height: 2.25rem;
+    font-weight: 700;
+    font-size: 24px;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
   }
 
   &__anchor {
@@ -30,5 +46,20 @@
 
   &:hover>&__anchor>svg {
     visibility: visible;
+  }
+
+  &--h1>&__anchor>svg {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+
+  &--h2>&__anchor>svg {
+    width: 1.25rem;
+    height: 1.25rem;
+  }
+
+  &--h3>&__anchor>svg {
+    width: 1rem;
+    height: 1rem;
   }
 }
