--- a/cursus/templates/doc-details.html
+++ b/cursus/templates/doc-details.html
@@ -48,9 +48,9 @@
 
     <pre>
       <code class="language-bash">
-        curl --request GET \
-        -H 'X-CURSUS-API-TOKEN': &lt;YOUR_API_TOKEN&gt;' \
-        --url 'https://cursus.onrender.com/api/v1/university/mit'
+curl --request GET \
+-H 'X-CURSUS-API-TOKEN': &lt;YOUR_API_TOKEN&gt; \
+--url 'https://cursus.onrender.com/api/v1/university/mit'
       </code>
     </pre>
 
