feat: add content hash for cache busting

--- a/cursus/templates/_profile.html
+++ b/cursus/templates/_profile.html
@@ -1,5 +1,8 @@
-{% extends "_base.html" %} {% block title %}Profile{% endblock %} {% block main
-%} {{ super() }}
+{% extends "_base.html" %}
+{% block title %}Profile{% endblock %} 
+
+{% block main%} 
+{{ super() }}
 <div class="profile">
   <div class="container-sm container-md container-lg py-8">
     <div class="display-flex flex-col flex-lg-row gap-8">
