--- a/cursus/templates/docs.html
+++ b/cursus/templates/docs.html
@@ -9,7 +9,7 @@ main %} {{ super() }}
   </div>
   <div class="docs__banner__image">
     <img
-      src="/static/img/docs-banner.png"
+      src="{{ url_for('get_image', filename='docs-banner.png') }}?v={{ content_hash_for_image('docs-banner.png') }}"
       width="1440"
       height="360"
       alt="Main doc banner"
