--- a/cursus/templates/4xx.html
+++ b/cursus/templates/4xx.html
@@ -1,29 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>{{ title }} - Cursus</title>
+{% extends "_base.html" %} 
+{% block title %}{{ status_message }}{% endblock %} 
 
-    <!-- Metadata -->
-    <meta charset="UTF-8" />
-    <meta viewport="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Cursus" />
+{% block main %} 
+{{ super() }}
+<div class="container-sm container-md container-lg">
+  <h1>{{ status_code }}: {{ status_message }}</h1>
+  <h3>{{ reason }}</h3>
+</div>
+{% endblock %}
 
-    <!-- Favicon -->
-    <link rel="icon" href="/static/favicon.ico" />
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="/static/css/index.css" />
-    <style>
-      body {
-        font-family: Arial, Helvetica, sans-serif;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>{{ status_code }}: {{ status_message }}</h1>
-    <h3>{{ reason }}</h3>
-  </body>
-
-  <!-- JavaScript -->
-  <script src="/static/js/index.js"></script>
-</html>
