--- a/cursus/templates/_base.html
+++ b/cursus/templates/_base.html
@@ -8,7 +8,10 @@
 
     <!-- Favicon -->
     <link rel="icon" href="/static/favicon.ico" />
-    <link rel="apple-touch-icon" href="/static/img/logo-180.png" />
+    <link 
+      rel="apple-touch-icon" 
+      href="{{ url_for('get_image', filename='logo-180.png') }}?v={{ content_hash_for_image('logo-180.png') }}"
+    />
 
     <!-- Manifest -->
     <link rel="manifest" href="/static/manifest.json" />
@@ -32,7 +35,7 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://cursus.onrender.com" />
-    <meta property="og:image" content="/static/img/logo-180.png" />
+    <meta property="og:image" content="{{ url_for('get_image', filename='logo-180.png') }}?v={{ content_hash_for_image('logo-180.png') }}" />
     <meta property="og:image:width" content="180" />
     <meta property="og:image:height" content="180" />
     <meta property="og:image:type" content="image/png" />
@@ -46,7 +49,7 @@
       name="twitter:description"
       content="An open-source API repository for university courses "
     />
-    <meta name="twitter:image" content="/static/img/logo-180.png" />
+    <meta name="twitter:image" content="{{ url_for('get_image', filename='logo-180.png') }}?v={{ content_hash_for_image('logo-180.png') }}" />
 
     <!-- CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -97,8 +100,8 @@
       Install
     </button>
     <!-- Navbar -->
-    {% from "macros/navbar.html" import navbar with context %} {{
-    navbar(page_name) }}
+    {% from "macros/navbar.html" import navbar with context %} 
+    {{ navbar(page_name) }}
 
     <!-- Main -->
     <main style="padding-top: 72px; min-height: calc(100vh - 7.25rem)">
@@ -106,9 +109,14 @@
     </main>
 
     <!-- Footer -->
-    {% import 'macros/footer.html' as footer %} {{ footer.footer() }} {% assets
-    "js_all" %}
-    <script src="{{ ASSET_URL }}"></script>
-    {% endassets %} {% block js %} {% endblock %}
+    {% import 'macros/footer.html' as footer %}
+    {{ footer.footer() }} 
+
+    {% assets "js_all" %}
+      <script src="{{ ASSET_URL }}"></script>
+    {% endassets %} 
+    
+    <!-- Some pages have their own JavaScript code -->
+    {% block js %} {% endblock %}
   </body>
 </html>
