--- a/cursus/templates/doc-search.html
+++ b/cursus/templates/doc-search.html
@@ -11,12 +11,12 @@
     <h1 class="docs__banner__text">Search</h1>
   </div>
   <div class="docs__banner__image">
-    <img
-      src="/static/img/docs-search-banner.png"
-      width="1440"
-      height="360"
-      alt="Search doc banner"
-    />
+      <img
+        src="{{ url_for('get_image', filename='docs-search-banner.png') }}?v={{ content_hash_for_image('docs-search-banner.png') }}"
+        width="1440"
+        height="360"
+        alt="Search doc banner"
+      />
   </div>
 </div>
 
