--- a/cursus/templates/_profile.html
+++ b/cursus/templates/_profile.html
@@ -67,9 +67,7 @@
             </button>
           </div>
         </div>
-        <div class="profile__detail mt-8">
-          <div class="profile__spa">{{ sub_page }}</div>
-        </div>
+        <div class="profile__spa mt-8">{{ sub_page }}</div>
       </div>
     </div>
   </div>
