--- a/cursus/static/scss/components/_button.scss
+++ b/cursus/static/scss/components/_button.scss
@@ -41,6 +41,22 @@
         background-color: rgb(var(--color-indigo-600) / 1);
         border-color: rgb(var(--color-indigo-700) / 1);
       }
+
+      &:disabled,
+      &.disabled,
+      &.btn--disabled {
+        background-color: rgb(var(--color-cursus) / 0.65);
+        border-color: rgb(var(--color-indigo-600) / 0.65);
+        color: rgb(var(--color-white) / 1);
+        cursor: not-allowed;
+      }
+
+      &:hover:disabled,
+      &:hover.disabled,
+      &:hover.btn--disabled {
+        background-color: rgb(var(--color-indigo-600) / 0.65);
+        border-color: rgb(var(--color-indigo-700) / 0.65);
+      }
     }
 
     &.btn--neutral {
