--- a/cursus/templates/_profile.html
+++ b/cursus/templates/_profile.html
@@ -15,7 +15,7 @@
                 href="javascript:void(0)"
                 class="profile__nav-item"
               >
-                <i class="fas fa-user"></i>
+                <i class="fi fi-sr-user"></i>
                 <p>Account</p>
               </a>
             </li>
@@ -25,18 +25,18 @@
                 href="javascript:void(0)"
                 class="profile__nav-item"
               >
-                <i class="fas fa-user"></i>
+                <i class="fi fi-rr-code-simple"></i>
                 <p>Tokens</p>
               </a>
             </li>
             <li>
               <a
-                id="profile-update"
+                id="profile-history"
                 href="javascript:void(0)"
                 class="profile__nav-item"
               >
-                <i class="fas fa-user"></i>
-                <p>Update</p>
+                <i class="fi fi-rr-time-forward"></i>
+                <p>History</p>
               </a>
             </li>
           </ul>
