feat: add history log routine for account activities

--- a/cursus/templates/profile-account.html
+++ b/cursus/templates/profile-account.html
@@ -30,7 +30,7 @@
     </div>
     <div class="profile__field__footer">
       <div class="profile__field__suggestion">
-        Your account is logged in with <span>Google</span>
+        Your account is logged in with <span>{{ current_user.provider }}</span>
       </div>
     </div>
   </div>
