feat: add privacy-policy page

--- a/cursus/templates/macros/footer.html
+++ b/cursus/templates/macros/footer.html
@@ -8,7 +8,7 @@
       <div class="col-12 col-lg-6">
         <div class="footer__legality">
           <div class="footer__legality__wrapper">
-            <a class="footer__legality__link" href="#">Privacy</a>
+            <a class="footer__legality__link" href="{{ url_for('views.show', page_name='privacy')}}">Privacy</a>
             <a class="footer__legality__link" href="#">Terms</a>
             <a class="footer__legality__link" href="#">Contact</a>
             <a class="footer__legality__link" href="#">FAQ</a>
