feat: add provider in profile page

--- a/cursus/static/scss/pages/_profile.scss
+++ b/cursus/static/scss/pages/_profile.scss
@@ -407,6 +407,9 @@
     }
 
     &__suggestion {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
       font-size: 15px;
       color: rgb(var(--color-gray-600) / 1);
     }
