--- a/cursus/templates/privacy.html
+++ b/cursus/templates/privacy.html
@@ -1,6 +1,5 @@
 {% extends "_base.html" %} 
-{}
-{% block title %}Privacy Policy{% endblock %}
+{% block title %}Terms of Use{% endblock %}
 
 {% block main %}
 {{ super() }}
