--- a/cursus/templates/profile-account.html
+++ b/cursus/templates/profile-account.html
@@ -123,8 +123,8 @@
       <div class="profile__field__action-bar">
         <button
           type="button"
-          id="profile-display-submit-name-btn"
-          data-cursus-field-submit-at="profile-display-name"
+          id="profile-delete-account-btn"
+          data-cursus-field-submit-at="profile-delete-account"
           class="btn btn--primary btn--danger profile__field__action-btn"
         >
           Delete this account
